@startuml

package Model {
        abstract  class Vehiculo {
                
                + {abstract} penalizacionPozo(): void
                + {abstract} penalizacionPiquete() : void
                + {abstract} penalizacionControl() : void
        }
}

package Model {
        class Moto {
              + penalizacionPozo(): void
              + penalizacionPiquete() : void
              + penalizacionControl() : void
        }
}

package Model {
        class Auto {
              + penalizacionPozo(): void
              + penalizacionPiquete() : void
              + penalizacionControl() : void
        }
}

package Model {
        class 4x4 {
              + penalizacionPozo(): void
              + penalizacionPiquete() : void
              + penalizacionControl() : void
        }
}

Vehiculo <|-- Moto
Vehiculo <|-- Auto
Vehiculo <|-- 4x4

@enduml
